[gd_scene load_steps=16 format=2]

[ext_resource path="res://Baby/Baby.gd" type="Script" id=1]
[ext_resource path="res://Baby/baby2.wav" type="AudioStream" id=2]
[ext_resource path="res://Sprite/Baby.png" type="Texture" id=3]
[ext_resource path="res://Baby/baby.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 36 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0.74902, 0, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0.435294, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.74902, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.431373, 0, 0, 1 )

[sub_resource type="Animation" id=13]
resource_name = "Cry"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( 12, 12 ), Vector2( 10, 10 ) ]
}

[node name="Baby" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.811765, 0.811765, 1, 1 )
position = Vector2( -4.76837e-07, 0 )
scale = Vector2( 10, 10 )
frames = SubResource( 6 )

[node name="AudioCry" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AudioRock" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="TimerCry" type="Timer" parent="."]
wait_time = 2.0

[node name="TimerRock" type="Timer" parent="."]
wait_time = 10.0

[node name="TimerEnd" type="Timer" parent="."]
wait_time = 10.0

[node name="ProgressBarGreen" type="ProgressBar" parent="."]
margin_top = -48.0
margin_right = 48.0
margin_bottom = -40.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 11 )
custom_styles/bg = SubResource( 12 )
step = 1.0
percent_visible = false

[node name="ProgressBarRed" type="ProgressBar" parent="."]
margin_top = -48.0
margin_right = 48.0
margin_bottom = -40.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
step = 1.0
percent_visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Cry = SubResource( 13 )

[connection signal="body_entered" from="." to="." method="_on_Baby_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Baby_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="TimerCry" to="." method="_on_TimerSound_timeout"]
[connection signal="timeout" from="TimerRock" to="." method="_on_TimerRock_timeout"]
[connection signal="timeout" from="TimerEnd" to="." method="_on_TimerEnd_timeout"]
